--- a/src/components/header.css
+++ b/src/components/header.css
@@ -68,7 +68,7 @@
 
 @media (max-width: 768px) {
   .header-container {
-    height: 28rem; /* πιο μικρό ύψος */
+    height: 30rem; /* πιο μικρό ύψος */
   }
 
   .header-content {
@@ -78,17 +78,17 @@
   }
 
   .small-title {
-    font-size: 0.75rem; /* 12px */
+    font-size: 0.77rem; /* 12px */
     letter-spacing: 1px;
   }
 
   .main-title {
-    font-size: 2rem; /* 32px */
+    font-size: 2.1rem; /* 32px */
     line-height: 1.2;
   }
 
   .description {
-    font-size: 0.6875rem; /* 11px */
+    font-size: 0.6975rem; /* 11px */
     letter-spacing: 1px;
   }
 
